# itsdani-logging

./: README.md  pyproject.toml
.github/workflows/: build-and-publish.yaml  googlelogin.yml
src/itsdani/logging/: __init__.py  logging.py
