[project]
name = "itsdani-logging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.black]
preview = true
unstable = true

[tool.isort]
profile = "black"
known_first_party = "itsdani"

[tool.uv.build-backend]
module-name = "itsdani.logging"
namespace = true

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
